# LLM_basic

./: API_key_practice.ipynb  README.md  Simple_MLpipeline.ipynb  pyproject.toml
Attention/: Attention.ipynb
NLP/: NLP_실습(IMDB).ipynb  NLP_실습(IMDB)_DL.ipynb  NLP_실습(IMDB)_ML.ipynb  임베딩 정리.ipynb  토큰화 정리.ipynb
Transformer/: transformer.ipynb
llm_engineering/: settings.py
llm_engineering/application/: utils.py
llm_engineering/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_engineering/domain/: documents.py  exceptions.py  types.py
llm_engineering/domain/base/: nosql.py
llm_engineering/infrastructure/db/: mongo.py
pipelines/: digital_data_etl.py
steps/etl/: crawl_links.py  get_or_create_user.py
